syntax = "proto3";

option java_package = "com.tsunacan.expressbustimetableapp";
option java_multiple_files = true;

message DefaultBusStop{
    string parentRouteId = 1;
    string parentRouteName = 2;
    string busStopId = 3;
    string busStopName = 4;
}
